# learnstructure

./: .gitignore  README.md  emmc-map-v2x.drawio
RTSPtoEcal/: .gitignore  .gitmodules  CMakeLists.txt  MatrixJson.cpp  MatrixJson.h  MqttClient.cpp  MqttClient.h  Obstacle.cpp  Pedestrain.cpp  Pedestrain.h  README.md  capture_picture.cpp  capture_picture.h  ecalpub.cpp  ecalpub.h  main.cpp  matrixFilter.cpp  matrixFilter.h  matrixFilter.json
RTSPtoEcal/Helper/: .gitignore  CMakeLists.txt  GpsXForm.cpp  GpsXForm.h  Helper.cpp  Helper.h  Location.cpp  Location.h  Log.cpp  Log.h  README.md  module_alive.cpp  module_alive.h
RTSPtoEcal/Proto/: CMakeLists.txt  README.md  comm.proto  heartbeat.proto  rsi.proto  rsm.proto  type.proto
RTSPtoEcal/matrix-dev-sdk/: CMakeLists.txt  readme.txt
RTSPtoEcal/matrix-dev-sdk/include/matrix-dev-sdk/export/: MATRIX.h  Obstacle.h  adas_errno.h  frame_intf.h  network_receiver_intf.h  pack_loader_intf.h
RTSPtoEcal/matrix-dev-sdk/src/: main.cpp
casetest/: CMakeLists.txt  lane.cpp  lane.h  line.json  main.cpp  share_mem.cpp  share_mem.h
casetest/deb/: cv2ecal_git-r0.10_arm64.deb  smartroadem_git-r0.14_arm64.deb
cmake/ctestcase/: CMakeLists.txt  tutorial.cpp
ecalpro/pub/: CMakeLists.txt  pub.cpp
ecalpro/sub/: CMakeLists.txt  subecal.cpp
hkcamera/readRTSP/: CMakeLists.txt  readrtsp.cpp
meta-leo/: README.md
meta-leo/conf/: layer.conf
meta-leo/recipes-applications/HwMoniter/: hwmoniter_git.bb
meta-leo/recipes-applications/HwMoniter/files/: hwmoniter.service
meta-leo/recipes-applications/cannet2ecal/: cannet2ecal_git.bb
meta-leo/recipes-applications/cannet2ecal/files/: cannet2ecal.service
meta-leo/recipes-applications/cfusion/: cfusion_git.bb
meta-leo/recipes-applications/cfusion/files/: cfusion.service
meta-leo/recipes-applications/cv2ecal/: cv2ecal_git.bb
meta-leo/recipes-applications/cv2ecal/files/: cv2ecal.service
meta-leo/recipes-applications/ecal2rsu/: ecal2rsu_git.bb
meta-leo/recipes-applications/ecal2rsu/files/: ecal2rsu.service
meta-leo/recipes-applications/ecal2tlc/: ecal2tlc_git.bb
meta-leo/recipes-applications/ecal2tlc/files/: ecal2tlc.service
meta-leo/recipes-applications/relaycontrol/: relaycontrol_git.bb
meta-leo/recipes-applications/smartroadem/: smartroadem_git.bb
meta-leo/recipes-applications/smartroadem/files/: smartroadem.service
meta-leo/recipes-bsp/u-boot/: u-boot-dey_%.bbappend  u-boot-fw-utils_%.bbappend
meta-leo/recipes-bsp/u-boot/files/ccimx8x-sbc-pro/: boot.txt
meta-leo/recipes-connectivity/chrony/: chrony_%.bbappend
meta-leo/recipes-connectivity/dhcp/: dhcp_%.bbappend
meta-leo/recipes-connectivity/dhcp/files/: udhcp.conf
meta-leo/recipes-connectivity/hostapd/: hostapd_%.bbappend
meta-leo/recipes-connectivity/sr_beagent/: sr-beagent_git.bb
meta-leo/recipes-core/busybox/: busybox_1.%.bbappend  install_linux_fw_sd.scr  install_linux_fw_sd.txt  mkimage  readme
meta-leo/recipes-core/busybox/busybox/: busybox-enable-init-config.patch  enable-coredump.cfg
meta-leo/recipes-core/init-ifupdown/: init-ifupdown_1.0.bbappend
meta-leo/recipes-core/init-ifupdown/files/: cp_interfaces.service  cp_interfaces.sh  en_ipforward.service  en_ipforward.sh  interfaces.eth0
meta-leo/recipes-core/init-ifupdown/files/ccimx6sbc/: interfaces.eth0
meta-leo/recipes-core/sdbus-c++/: sdbus-c++-tools-native_0.7.2.bb  sdbus-c++_0.7.2.bb
meta-leo/recipes-core/sdbus-c++/sdbus-c++-0.7.2/: run-ptest
meta-leo/recipes-core/systemd/: systemd-conf%.bbappend
meta-leo/recipes-core/udev/udev-extraconf/: automount.rules
meta-leo/recipes-extended/dzdata/: tzdata.bbappend
meta-leo/recipes-kernel/linux/: linux-dey_4.14.bbappend
meta-leo/recipes-kernel/linux/linux-dey/dey/: dts.patch
meta-leo/recipes-leo/images/: dey-image-leo.bb
meta-leo/recipes-smart-city/sc_radar_em/: sc-radar-em_0.2.bb
meta-leo/recipes-smart-city/sc_radar_em/files/: Changsha.rtx  sc_radar_em.service
meta-leo/recipes-smartroad/images/: dey-image-leo.bb
meta-leo/temp_keys/: README  smartroad_dev.cert.pem  smartroad_dev.key.pem
mosquitto/: CMakeLists.txt  msgsps_pub.cpp
mutithread/: CMakeLists.txt  main.cpp  threadcase.cpp  threadcase.h
perftest/: perf.data.old
perftest/FlameGraph/: out.perf-folded  perf.data
pid/: CMakeLists.txt  PID.cpp  PID.h  main.cpp
radar_can/: CMakeLists.txt  CSocketCan.cpp  CSocketCan.h  ecal_radar.h  main.cpp  radar_data.cpp  radar_data.h
shell/: check.sh  checkdisk.sh  cp.txt  filecheck.sh  interfaces.default
socket/udptest/: README
socket/udptest/rawsocket/: udpram.cpp
socket/udptest/receive/: CMakeLists.txt  rev.cpp
socket/udptest/send/: CMakeLists.txt  udpsend.cpp
